--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     <!--                <li><a href="#fourth-screen">ישיא ןמוי</a></li>-->
                     <!--                <li><a href="#third-screen">םיסרוק</a></li>-->
                     <!--                <li><a class="btn-link" target="_blank" href="https://headstart.co.il/project/60611">הספר</a></li>-->
-                    <li><a href="#purpose">המטרה</a></li>
+                    <!-- <li><a href="#purpose">המטרה</a></li> -->
                     <li><a href="#about">נעים להכיר</a></li>
                 </ul>
 
@@ -143,14 +143,14 @@
     <div class="sidebar">
         <ul class="links-nav" id="nav-menu">
             <li data-menuanchor="about" class="active"><a class="link" href="#about"><span>01</span></a></li>
-            <li data-menuanchor="purpose"><a class="link" href="#purpose"><span>02</span></a></li>
-            <li data-menuanchor="reviews"><a class="link" href="#reviews"><span>03</span></a></li>
+            <!-- <li data-menuanchor="purpose"><a class="link" href="#purpose"><span>02</span></a></li> -->
+            <li data-menuanchor="reviews"><a class="link" href="#reviews"><span>02</span></a></li>
             <!-- <li data-menuanchor="landing"><a class="link" href="#landing"><span>04</span></a></li> -->
-            <li data-menuanchor="test"><a class="link" href="#test"><span>04</span></a></li>
+            <li data-menuanchor="test"><a class="link" href="#test"><span>03</span></a></li>
             <!--        <li data-menuanchor="third-screen" ><a class="link" href="#third-screen"><span>03</span></a></li>-->
             <!--        <li data-menuanchor="fourth-screen" ><a class="link" href="#fourth-screen"><span>04</span><span class="sub-page"></span></a></li>-->
             <!--        <li data-menuanchor="fifth-screen" ><a class="link" href="#fifth-screen"><span>05</span></a></li>-->
-            <li data-menuanchor="contact"><a class="link" href="#contact"><span>05</span></a></li>
+            <li data-menuanchor="contact"><a class="link" href="#contact"><span>04</span></a></li>
         </ul>
         <div class="total-slides">05</div>
 
@@ -283,7 +283,7 @@
         </div>
 
         <!--SCREEN-BLOCK-2-->
-        <div id="purpose" class="screen-block top second section">
+        <!-- <div id="purpose" class="screen-block top second section">
             <div class="container">
                 <h2>המטרה הגדולה שלי</h2>
 
@@ -310,7 +310,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
 
         <!--SCREEN-BLOCK-3-->
         <div id="reviews" class="reviews-block screen-block top section third" dir="rtl">
