--- a/index.html
+++ b/index.html
@@ -78,14 +78,9 @@
 
                 <ul class="nav">
                     <li><a href="#contact">בואו נדבר</a></li>
-                    <!-- <li><a href="#landing">שיטת ארבעת הצבעים</a></li> -->
+                    <li><a href="./book.html">ארבעת הצבעים</a></li>
                     <li><a href="#test">מבחן אישיות</a></li>
                     <li><a href="#reviews">מה אומרים עלי</a></li>
-                    <!--                <li><a href="#fifth-screen">תידדה הרזע</a></li>-->
-                    <!--                <li><a href="#fourth-screen">ישיא ןמוי</a></li>-->
-                    <!--                <li><a href="#third-screen">םיסרוק</a></li>-->
-                    <!--                <li><a class="btn-link" target="_blank" href="https://headstart.co.il/project/60611">הספר</a></li>-->
-                    <!-- <li><a href="#purpose">המטרה</a></li> -->
                     <li><a href="#about">נעים להכיר</a></li>
                 </ul>
 
@@ -632,7 +627,7 @@
                     </ul>
                 </div>
             </div>
-        </div>
+        </div>  
 
         <!--SCREEN-BLOCK-7-->
         <!-- <div id="landing" class="screen-block top section seventh">
@@ -1057,12 +1052,13 @@
                         fill="#3A5EE5" />
                 </svg>
             </button>
-            <iframe id="video-frame" width="100%" height="100%" src="https://www.youtube.com/embed/BrhhrEy_Hfs?si=xZ7ubvLOa9cqu4gD"
-                frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+            <iframe id="video-frame" width="100%" height="100%"
+                src="https://www.youtube.com/embed/BrhhrEy_Hfs?si=xZ7ubvLOa9cqu4gD" frameborder="0"
+                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
         </div>
     </div>
-
+    c
     <div class="video-modal video-modal-2">
         <div class="video-wrapper">
             <button class="close-btn" type="button">
