--- a/test.html
+++ b/test.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="./css/jquery.pagepiling.min.css">
     <link rel="stylesheet" href="./css/slick.css">
     <link rel="stylesheet" href="./css/styles.css?v=21">
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 <body class="landing-page test-page">
 
@@ -263,7 +264,7 @@
             <div class="form-wrapper">
                 <div class="flex">
                     <!--RESULT-FORM-->
-                    <form class="result-form" id="contactForm" method="post">
+                    <form class="result-form" method="post" id="contactForm">
                     <input type="hidden" name="access_key" value="28575e85-e837-407b-81d6-9328800e1380">
 
                         <span class="title">לקבלת תוצאות מפורטות לוואטספ בחינם לגמרי תמלאו את הפרטים</span>
@@ -782,76 +783,7 @@
 <script src="./js/slick.1.8.1.js"></script>
 <script src="./js/main.js?v=15"></script>
 <script src="./js/test.js?v=4"></script>
+<script src="./js/contact.js"></script>
+
 </body>
-</html>                             <path
-                                        d="M10 0C4.50745 0 0 4.50745 0 10C0 11.8127 0.488739 13.5774 1.41556 15.1213L0 20L4.87869 18.5844C6.42258 19.5113 8.18726 20 10 20C15.4926 20 20 15.4926 20 10C20 4.50745 15.4926 0 10 0ZM16.2521 14.2253L15.7869 14.6906C15.1286 15.3488 13.6148 15.2966 12.6421 15.1088C9.40765 14.4841 5.63675 10.829 4.90952 7.66373C4.54941 6.09573 4.74823 4.73251 5.26825 4.21234L5.73349 3.7471C5.9903 3.49045 6.40747 3.49075 6.66397 3.7471L8.52524 5.60852C8.64944 5.73273 8.7175 5.89737 8.7175 6.07361C8.7175 6.24985 8.64944 6.41464 8.52524 6.53839L8.06015 7.00409C7.54745 7.51801 7.54745 8.35281 8.06015 8.86551L11.1337 11.8987C11.6479 12.4129 12.4802 12.4135 12.9951 11.8987L13.4604 11.4336C13.7006 11.192 14.1492 11.1913 14.3913 11.4336L16.2521 13.2944C16.5048 13.546 16.5144 13.9629 16.2521 14.2253Z"
-                                        fill="#3a5ee5" />
-                                </svg>
-                            </span>
-                        </a></li>
-
-                    <li><a href="https://youtube.com/channel/UCfwaYC_TZLcVfpTMWSzl1vw" target="_blank">
-                            <span class="img-box">
-                                <svg width="23" height="23" viewBox="0 0 23 23" fill="none"
-                                    xmlns="http://www.w3.org/2000/svg">
-                                    <path
-                                        d="M21.8257 6.11039C21.5772 5.18664 20.8489 4.45846 19.9253 4.20972C18.238 3.74805 11.4885 3.74805 11.4885 3.74805C11.4885 3.74805 4.7393 3.74805 3.05197 4.19222C2.14612 4.4407 1.40004 5.18678 1.15156 6.11039C0.70752 7.7976 0.70752 11.2966 0.70752 11.2966C0.70752 11.2966 0.70752 14.8133 1.15156 16.4829C1.4003 17.4065 2.12835 18.1347 3.0521 18.3834C4.75707 18.8452 11.4888 18.8452 11.4888 18.8452C11.4888 18.8452 18.238 18.8452 19.9253 18.4011C20.8491 18.1524 21.5772 17.4243 21.826 16.5006C22.2699 14.8133 22.2699 11.3144 22.2699 11.3144C22.2699 11.3144 22.2877 7.7976 21.8257 6.11039ZM9.33963 14.5292V8.0641L14.9521 11.2966L9.33963 14.5292Z"
-                                        fill="#2E3262" />
-                                </svg>
-
-                            </span>
-                        </a></li>
-
-                    <li><a href="mailto:support@levkazaryan.com" target="_blank">
-                            <span class="img-box">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20"
-                                    viewBox="0 0 512 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
-                                    <path fill="#3A5EE5"
-                                        d="M48 64C21.5 64 0 85.5 0 112c0 15.1 7.1 29.3 19.2 38.4L236.8 313.6c11.4 8.5 27 8.5 38.4 0L492.8 150.4c12.1-9.1 19.2-23.3 19.2-38.4c0-26.5-21.5-48-48-48L48 64zM0 176L0 384c0 35.3 28.7 64 64 64l384 0c35.3 0 64-28.7 64-64l0-208L294.4 339.2c-22.8 17.1-54 17.1-76.8 0L0 176z" />
-                                </svg>
-                            </span>
-                        </a></li>
-                </ul>
-            </div>
-        </div>
-    </footer>
-
-    <!--POPUP-->
-    <div class="test-popup-wrapper">
-        <!--TEST-POPUP-1-->
-        <div class="first stage-1 test-popup">
-            <button class="close-button"></button>
-            <div class="img-box"></div>
-            <span class="title">מזל טוב!</span>
-            <span class="text">עברת את השלב הראשון של המבחן</span>
-            <button class="popup-next-stage blue-btn">2 עבור לשלב</button>
-            <a href="#" class="popup-back-button link-btn">1 חזרה לשלב</a>
-        </div>
-        <!--TEST-POPUP-2-->
-        <div class="second stage-2 test-popup">
-            <button class="close-button"></button>
-            <div class="img-box"></div>
-            <span class="title">מזל טוב!</span>
-            <span class="text">עברת את השלב הראשון של המבחן</span>
-            <button class="popup-next-stage blue-btn">3 עבור לשלב</button>
-            <a href="#" class="popup-back-button link-btn">2 חזרה לשלב</a>
-        </div>
-        <!--TEST-POPUP-3-->
-        <div class="stage-3 test-popup third">
-            <button class="close-button"></button>
-            <div class="img-box"></div>
-            <span class="title">מזל טוב!</span>
-            <span class="text">סיימת את המבחן</span>
-            <button class="popup-final-stage blue-btn">גלה את התוצאות</button>
-            <a href="#" class="popup-back-button link-btn">3 חזרה לשלב</a>
-        </div>
-    </div>
-
-    <script src="./js/jquery.min.js"></script>
-    <script src="./js/slick.1.8.1.js"></script>
-    <script src="./js/main.js?v=15"></script>
-    <script src="./js/test.js?v=4"></script>
-    <script src="./js/contact.js"></script>
-</body>
-
 </html>
